Added nav bar and main navigational pages
including bootstrap and jquery

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 ﻿extends layout
 
+block vars
+	- var navButtonViewClass = 'active'
+	- var navButtonModifyClass = ''
+	- var navButtonRemoveClass = ''
+
 block content
-  h1= title
-  p Welcome to #{title}
+	a(href="#") This is the Main page
