Setup socket.io
communication between the client javascript and the server

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,7 @@ block vars
 	- var navButtonViewClass = 'active'
 	- var navButtonModifyClass = ''
 	- var navButtonRemoveClass = ''
+	- var onloadFunction = 'InitializeFormContent()'
 
 block content
 	a(href="#") This is the Main page
