--- a/views/modifymovielanding.jade
+++ b/views/modifymovielanding.jade
@@ -4,6 +4,7 @@ block vars
 	- var navButtonViewClass = ''
 	- var navButtonModifyClass = 'active'
 	- var navButtonRemoveClass = ''
+	- var onloadFunction = ''
 
 block content
 	a(href="#") This is Modify Movie Landing
