Demonstration of different client sessions using socket.io
setup instantiable classes to demonstrate socket.io communication with
different clients at the same time

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,4 +7,4 @@ block vars
 	- var onloadFunction = 'InitializeFormContent()'
 
 block content
-	a(href="#") This is the Main page
+	a(href="#" id="buttonthing") This is the Main page
