Display movies as html p content
just so we can see what we are doing

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,9 +33,9 @@ html
 								span(class="caret")
 							ul(class="dropdown-menu" role="menu")
 								li 
-									a(href="#") Title
+									a(id="SortByTitle" href="#") Title
 								li 
-									a(href="#") Rating
+									a(id="SortByRating" href="#") Rating
 					form(class="navbar-form navbar-right" role="search")
 						div(class="form-group")
 							input(type="text" class="form-control" placeholder="Search")
