optimize performance, get movies from dir
don't get image bytes from database (2.19s end to end) and especially do
not transfer them over socket.io (5.27s).

test front end javascript to display images directly from url
template function for getting movies from shared folder on network
(server side still, limitations with client side accessing file system).

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -38,8 +38,9 @@ html
 									a(id="SortByRating" href="#") Rating
 					form(class="navbar-form navbar-right" role="search")
 						div(class="form-group")
-							input(type="text" class="form-control" placeholder="Search")
-						button(type="submit" class="btn btn-default") Search / Directory
+							input(id="searchBox" type="text" class="form-control" placeholder="Search")
+						//button(id="searchButton" type="submit" class="btn btn-default") Search / Directory
+						button(id="searchButton" type="button" class="btn btn-default") Search / Directory
 					ul(class="nav navbar-nav navbar-right")
 						li
 							a(href="#") Link
